# hdsdp

./: .gitignore  CMakeLists.txt  README.md
doc/: hdsdp_doc.tm
examples/: 10teams.mps  acc-tight4.mps  afiro.mps  blend.mps
hdsdp.xcodeproj/: project.pbxproj
hdsdp.xcodeproj/project.xcworkspace/xcuserdata/gaowenzhi.xcuserdatad/: UserInterfaceState.xcuserstate
hdsdp.xcodeproj/xcuserdata/gaowenzhi.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
hdsdp/gpu/: mat2csc.py
hdsdp/gpu/A/: Ai.csv  Ap.csv  Ax.csv
hdsdp/hdsdp/: debug_data_lp.h  main.c
hdsdp/hdsdp/interface/: def_hdsdp_conic.h  def_hdsdp_lpkkt.h  def_hdsdp_lpsolve.h  def_hdsdp_psdp.h  hdsdp.c  hdsdp.h  hdsdp_algo.c  hdsdp_conic.c  hdsdp_conic_lp.c  hdsdp_lpkkt.c  hdsdp_lpkkt.h  hdsdp_lpsolve.c  hdsdp_lpsolve.h  hdsdp_psdp.c  hdsdp_utils.c  hdsdp_utils.h
hdsdp/hdsdp/linalg/: def_hdsdp_linsolver.h  dense_opts.h  hdsdp_linsolver.c  hdsdp_linsolver.h  sparse_opts.c  vec_opts.c
hdsdp/hdsdp/tests/: test_file_io.c
interface/: def_hdsdp.h  def_hdsdp_lpkkt.h  def_hdsdp_lpsolve.h  def_hdsdp_psdp.h  def_hdsdp_user_data.h  hdsdp.c  hdsdp.h  hdsdp_algo.c  hdsdp_conic.c  hdsdp_conic.h  hdsdp_conic_bound.c  hdsdp_conic_lp.c  hdsdp_conic_sdp.c  hdsdp_lpkkt.c  hdsdp_lpkkt.h  hdsdp_lpsolve.c  hdsdp_psdp.c  hdsdp_psdp.h  hdsdp_utils.c  hdsdp_utils.h
linalg/: def_hdsdp_linsolver.h  dense_opts.c  dense_opts.h  hdsdp_lanczos.c  hdsdp_linsolver.c  hdsdp_sdpdata.c  sparse_opts.c  sparse_opts.h  vec_opts.c  vec_opts.h
olp/: notes.tm  olp_ebc.tm  olp_implicit.tm  olp_notes.tm
olp/draft/: code.tex  main.tex  sample.bib
potred/: install.m
potred/matlab/: adsqp.m  potlogger.m  qpmodel.mps  test_ads.m
potred/matlab/src/: adsqp.m  findnegacurv.m  findntdir.m  fpot.m  getresi.m  hsdipm.m  hsdipm2.m  initpotlp.m  lpscale.m  lpsolve.m  pcscale.m  potProjObj.m  potRecur.m  potlanczos.m  presgdtrans.m  presgdtrans2.m  proj2d.m
potred/matlab/src/gdsolver/: lpgm.m  lpgm2.m  lpsgm.m  lpsgm2.m  sglpsolve.m  sglpsolve2.m
potred/matlab/src/potsolver/: gdinit.m  initpotlp.m  potgetlpres.m  potlogger.m  potresi.m  prepotdata.m  quadformw.m  ruizscale.m  subtrust.m
potred/matlab/test/: MXv.m  findnegacurv.m  grblp.m  preprocess.m  test_netlib.m  test_netlib_all.m
potred/src/potlp/potlp/: main.c
potred/src/potlp/potlp/include/: pot_def.h
potred/src/potlp/potlp/interface/: another_lp_solver.c  another_lp_solver.h  lp_newton.c  lp_newton.h  lp_qmatrix.c  lp_qmatrix.h  qp_avg.c  qp_avg.h
potred/src/potlp/potlp/linalg/: linsys.c  linsys.h  pardiso.h  vec_mat.c  vec_mat.h
potred/src/potlp/potlp/mex/: potlp.c  potlp_install.m
potred/src/potlp/potlp/potreduce/: cone_filter.c  cone_filter.h  pot_lanczos.c  pot_lanczos.h  pot_objfunc.h  pot_solver.c  pot_solver.h  pot_structs.h  pot_utils.c  pot_utils.h  pot_vector.c  pot_vector.h
potred/src/potlp/potlp/subgrad/: sgm.c  sgm.h
potred/src/potlp/potlp/test/: data.h  genlp.py
tests/: sdpasolve.c
